# mini-arcade

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml  hotfix-patch-release.yml  hotfix-patch.yml  release-major-minor.yml  reusable-python-ci.yml  reusable-release-package.yml  reusable-release-stack.yml  reusable-sync-develop.yml
docs/source/: conf.py  examples.md  index.md  quickstart.md  readme.md
docs/source/concepts/: architecture.md  capabilities.md
docs/source/contributing/: dev_setup.md  index.md  release_process.md  repo_layout.md
docs/source/games/: asteroids.md  deja_bounce.md  index.md  space_invaders.md
docs/source/tutorials/: 001_min_scene.md  002_hello_overlay.md  003_simple_shape.md  004_shape_gallery.md  create_game.md  e01_single_shape.md  e02_input_and_intents.md  e03_collisions_2d.md  e04_sprites_and_animation.md  e05_capture_screenshots.md  e06_determinism_basics.md  index.md  roadmap.md
docs/source/tutorials/config/: backend_swap.md  engine_config_basics.md
examples/: README.md  ROADMAP.md
examples/_shared/: defaults.py  run_example.py  runner.py  spec.py
examples/catalog/: __init__.py
examples/catalog/config/: __init__.py
examples/catalog/scene/: __init__.py
examples/scenes/001_min_scene/: README.md  main.py
examples/scenes/002_hello_overlay/: README.md  main.py
examples/scenes/003_simple_shape/: __init__.py  entities.py  main.py
examples/scenes/004_shape_gallery/: entities.py  main.py
examples/settings/: settings.yml
examples/settings/config/: backend_swap.yml  engine_config_basics.yml
examples/settings/scene/: minimal_scene.yml
scripts/: check-black.ps1  check-isort.ps1  check-pylint.ps1  dev_install.ps1  reinstall_deps.ps1  subtree-push.ps1
settings/: settings.yml
(+23 files in other folders)
